changed animation to resolve layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,20 @@ h6 {
     height: 100vh;
     width: 100%;
     z-index: 1;
+    animation-name: nav-overlay-animation;
+    animation-direction: normal;
+    animation-duration: 1s;
+    animation-play-state: paused;
     visibility: hidden;
+}
+
+@keyframes nav-overlay-animation {
+    from {
+        background-color: rgba(0, 0, 0, 0.0);
+    }
+    to {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 }
 
 #nav-bar {
@@ -315,19 +328,19 @@ h6 {
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 1;
-    animation-name: animation;
+    animation-name: nav-bar-animation;
     animation-direction: normal;
     animation-duration: 1s;
     animation-play-state: paused;
     visibility: hidden;
 }
 
-@keyframes animation {
+@keyframes nav-bar-animation {
     from {
-        left: 100%;
+        bottom: 100%;
     }
     to {
-        left: 0%
+        bottom: 0%
     }
 }
 
